--- a/colored-structor/package.json
+++ b/colored-structor/package.json
@@ -35,7 +35,7 @@
     "css-loader": "^0.26.1",
     "eventsource-polyfill": "^0.9.6",
     "exports-loader": "^0.6.3",
-    "express": "4.13.4",
+    "express": "^4.16.3",
     "express-urlrewrite": "1.2.0",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.4",
